--- a/core/template/mobile/cmd.info.binary.tmpliconline.html
+++ b/core/template/mobile/cmd.info.binary.tmpliconline.html
@@ -2,7 +2,7 @@
 	<center><span class="cmdName #hide_name#">#name_display#</span> <span class="iconCmdLine"></span></center>
 	<script>
 		 jeedom.cmd.addUpdateFunction('#id#',function(_options) {
-			var cmd = $('.cmd[data-cmd_id=#id#]')
+			let cmd = $('.cmd[data-cmd_id=#id#]')
 			if (_options.display_value == '1') {
 				$('.cmd[data-cmd_id=#id#] .iconCmdLine').empty().append("#_icon_on_#")
 			} else {
