--- a/core/template/dashboard/cmd.action.slider.button.html
+++ b/core/template/dashboard/cmd.action.slider.button.html
@@ -18,8 +18,8 @@
   </template>
   <script>
     $('.cmd[data-cmd_uid=#uid#] .bt_plus').on('click', function () {
-      var max = ('#maxValue#' == '') ?  Number.MAX_VALUE : parseFloat('#maxValue#')
-      var step = (isNaN(parseFloat('#step#'))) ?  0.5 : parseFloat('#step#')
+      let max = ('#maxValue#' == '') ?  Number.MAX_VALUE : parseFloat('#maxValue#')
+      let step = (isNaN(parseFloat('#step#'))) ?  0.5 : parseFloat('#step#')
       if (parseFloat($('.cmd[data-cmd_uid=#uid#] .in_value').val()) <= max - step ) {
         jeedom.cmd.refreshValue([{cmd_id :'#id#',display_value: parseFloat($('.cmd[data-cmd_uid=#uid#] .in_value').val()) + step}])
         $('.cmd[data-cmd_uid=#uid#] .in_value').trigger('change')
@@ -27,8 +27,8 @@
     })
 
     $('.cmd[data-cmd_uid=#uid#] .bt_minus').on('click', function () {
-      var min = ('#minValue#' == '') ? Number.MIN_VALUE : parseFloat('#minValue#')
-      var step = (isNaN(parseFloat('#step#'))) ?  0.5 : parseFloat('#step#')
+      let min = ('#minValue#' == '') ? Number.MIN_VALUE : parseFloat('#minValue#')
+      let step = (isNaN(parseFloat('#step#'))) ?  0.5 : parseFloat('#step#')
       if (parseFloat($('.cmd[data-cmd_uid=#uid#] .in_value').val()) >= min + step) {
         jeedom.cmd.refreshValue([{cmd_id :'#id#',display_value: parseFloat($('.cmd[data-cmd_uid=#uid#] .in_value').val()) - step}])
         $('.cmd[data-cmd_uid=#uid#] .in_value').trigger('change')
