--- a/core/template/dashboard/cmd.info.binary.tmplimg.html
+++ b/core/template/dashboard/cmd.info.binary.tmplimg.html
@@ -13,15 +13,13 @@
   </template>
   <script>
      jeedom.cmd.addUpdateFunction('#id#',function(_options) {
-      var cmd = $('.cmd[data-cmd_id=#id#]')
+      let cmd = $('.cmd[data-cmd_id=#id#]')
       if ('#_time_widget_#' == '1') {
         jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'), '#time#')
       } else {
         cmd.find('.timeCmd').parent().remove()
       }
-
       cmd.attr('title', '{{Date de valeur}} : '+_options.valueDate+'<br/>{{Date de collecte}} : '+_options.collectDate)
-
       if (_options.display_value == '1') {
         cmd.attr('data-state','on')
         cmd.find('.imgCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_on_#", "#_img_dark_on_#"))
@@ -29,20 +27,18 @@
         cmd.attr('data-state','off')
         cmd.find('.imgCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_off_#", "#_img_dark_off_#"))
       }
-
-      var style = ''
+      let style = ''
       if (!isNaN('#_desktop_width_#')) {
         style = 'max-width:#_desktop_width_#px !important;'
       }
       cmd.find('.imgCmd img').attr('style', style)
-
       cmd.off('changeThemeEventCmd').on('changeThemeEventCmd',function (event, theme) {
         if (cmd.attr('data-state') == 'on') {
           cmd.find('.imgCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_on_#", "#_img_dark_on_#"))
         } else {
           cmd.find('.imgCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_off_#", "#_img_dark_off_#"))
         }
-        var style = ''
+        let style = ''
         if (!isNaN('#_desktop_width_#')) {
           style = 'width:#_desktop_width_#px !important;'
         }
