--- a/core/template/dashboard/cmd.info.numeric.line.html
+++ b/core/template/dashboard/cmd.info.numeric.line.html
@@ -5,7 +5,7 @@
   <template></template>
   <script>
      jeedom.cmd.addUpdateFunction('#id#',function(_options) {
-      var cmd = $('.cmd[data-cmd_id=#id#]')
+      let cmd = $('.cmd[data-cmd_id=#id#]')
       cmd.attr('title','{{Date de valeur}} : '+_options.valueDate+'<br/>{{Date de collecte}} : '+_options.collectDate)
       cmd.find('.state').empty().append(_options.display_value+' '+_options.unit);
       if(_options.alertLevel){
