--- a/core/template/dashboard/cmd.info.numeric.tmplmultistate.html
+++ b/core/template/dashboard/cmd.info.numeric.tmplmultistate.html
@@ -16,36 +16,32 @@
   </template>
   <script>
      jeedom.cmd.addUpdateFunction('#id#',function(_options) {
-      var cmd = $('.cmd[data-cmd_id=#id#]')
+      let cmd = $('.cmd[data-cmd_id=#id#]')
       if ('#_time_widget_#' == '1') {
         jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'), '#time#')
       } else {
         cmd.find('.timeCmd').parent().remove()
       }
-
       cmd.attr('title', '{{Date de valeur}} : '+_options.valueDate+'<br/>{{Date de collecte}} : '+_options.collectDate+'<br/>{{Valeur}} : '+_options.display_value+'#unite#')
-
       try {
-        var state = ''
+        let state = ''
         #test#
         cmd.find('.iconCmd').empty().append(state)
       } catch (error) {
         console.log(error)
       }
-
-      var style = ''
+      let style = ''
       if (!isNaN('#_desktop_width_#')) {
         style = 'width:#_desktop_width_#px !important;'
       }
       cmd.find('.iconCmd img').attr('style', style)
-
       cmd.off('changeThemeEvent').on('changeThemeEventCmd',function (event, theme) {
-        var state = ''
+        let state = ''
         #change_theme#
         if (state != '') {
           cmd.find('.iconCmd').empty().append(state)
         }
-        var style = ''
+        let style = ''
         if (!isNaN('#_desktop_width_#')) {
           style = 'width:#_desktop_width_#px !important;'
         }
