--- a/core/template/mobile/cmd.action.other.tmplicon.html
+++ b/core/template/mobile/cmd.action.other.tmplicon.html
@@ -6,7 +6,7 @@
   </center>
   <script>
      jeedom.cmd.addUpdateFunction('#id#',function(_options) {
-      var cmd = $('.cmd[data-cmd_id=#id#]')
+      let cmd = $('.cmd[data-cmd_id=#id#]')
       if ('#_time_widget_#' != '1') {
         cmd.find('.timeCmd').remove()
       }
