--- a/core/template/mobile/cmd.info.binary.tmplimg.html
+++ b/core/template/mobile/cmd.info.binary.tmplimg.html
@@ -6,13 +6,12 @@
   </center>
   <script>
      jeedom.cmd.addUpdateFunction('#id#',function(_options) {
-      var cmd = $('.cmd[data-cmd_id=#id#]')
+      let cmd = $('.cmd[data-cmd_id=#id#]')
       if ('#_time_widget_#' == '1') {
         jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'), '#time#')
       } else {
         cmd.find('.timeCmd').remove()
       }
-
       if (_options.display_value == '1') {
         cmd.attr('data-state','on')
         cmd.find('.imgCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_on_#", "#_img_dark_on_#"))
@@ -20,21 +19,19 @@
         cmd.attr('data-state','off')
         cmd.find('.imgCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_off_#", "#_img_dark_off_#"))
       }
-
-      var style = ''
+      let style = ''
       if (!isNaN('#_mobile_width_#')) {
         style = 'max-width:#_mobile_width_#px !important;'
       }
       cmd.find('.imgCmd img').attr('style', style)
-
       cmd.off('changeThemeEvent').on('changeThemeEventCmd',function (event, theme) {
-        var cmd = $('.cmd[data-cmd_id=#id#]')
+        let cmd = $('.cmd[data-cmd_id=#id#]')
         if (cmd.attr('data-state') == 'on') {
           cmd.find('.imgCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_on_#", "#_img_dark_on_#"))
         } else {
           cmd.find('.imgCmd').empty().append(jeedom.widgets.getThemeImg("#_img_light_off_#", "#_img_dark_off_#"))
         }
-        var style = ''
+        let style = ''
         if(!isNaN('#_mobile_width_#')) {
           style = 'max-width:#_mobile_width_#px !important;'
         }
