--- a/core/template/mobile/cmd.info.numeric.horizontal.html
+++ b/core/template/mobile/cmd.info.numeric.horizontal.html
@@ -8,13 +8,12 @@
 
 	<script>
 		 jeedom.cmd.addUpdateFunction('#id#',function(_options) {
-			var position = _options.display_value
-			var minValue = ('#minValue#' == '') ? 0 : parseInt('#minValue#')
-			var maxValue = ('#maxValue#' == '') ? 100 : parseInt('#maxValue#')
+			let position = _options.display_value
+			let minValue = ('#minValue#' == '') ? 0 : parseInt('#minValue#')
+			let maxValue = ('#maxValue#' == '') ? 100 : parseInt('#maxValue#')
 			if (position > maxValue) position = maxValue
 			if (position < minValue) position = minValue
-
-			var width = ((position - minValue) * 100) / (maxValue - minValue)
+			let width = ((position - minValue) * 100) / (maxValue - minValue)
 			width = Math.round(parseFloat(width) * 10) / 10
 			$('.cmd[data-cmd_uid=#uid#] .hgauge-value').width(width+'%')
 			$('.cmd[data-cmd_uid=#uid#] .state strong').first().text(_options.display_value)
