--- a/core/template/dashboard/cmd.action.slider.button.html
+++ b/core/template/dashboard/cmd.action.slider.button.html
@@ -7,7 +7,7 @@
       <span class="input-group-btn" style="position: relative;">
         <a class="btn btn-default btn-sm bt_minus roundedLeft"><i class="fas fa-minus"></i></a>
       </span>
-      <input type="text" class="input-sm in_value form-control" value="#state# #unite#" disabled/>
+      <input type="text" class="input-sm in_value form-control" value="#state# #unite#" style="text-align:center;" disabled/>
       <span class="input-group-btn" style="position: relative;">
         <a class="btn btn-default btn-sm bt_plus roundedRight"><i class="fa fa-plus"></i></a>
       </span>
