--- a/3rdparty/elfinder/themes/css/theme-light.css
+++ b/3rdparty/elfinder/themes/css/theme-light.css
@@ -1,18 +1,16 @@
-@charset "UTF-8";
 /*!
- * elFinder-Material-Theme (Light) v2.1.11 (https://github.com/RobiNN1/elFinder-Material-Theme)
- * Copyright 2016-2021 Róbert Kelčák {RobiNN}
+ * elFinder-Material-Theme (Light) v2.1.14 (https://github.com/RobiNN1/elFinder-Material-Theme)
+ * Copyright 2016-2022 Róbert Kelčák
  * Licensed under MIT (https://github.com/RobiNN1/elFinder-Material-Theme/blob/master/LICENSE)
  */
-@import url("https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i&subset=cyrillic,cyrillic-ext,devanagari,greek,greek-ext,latin-ext,vietnamese");
 .elfinder {
   color: #546e7a;
-  font-family: "Noto Sans", sans-serif;
+  font-family: -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 .elfinder.ui-widget.ui-widget-content {
-  font-family: "Noto Sans", sans-serif;
+  font-family: -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.6);
   border-radius: 0;
   border: 0;
@@ -58,6 +56,7 @@
 }
 .elfinder-notify-progress,
 .elfinder-resize-spinner {
+  background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
   background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
   background-size: 1rem 1rem;
   -webkit-animation: progress-animation 1s linear infinite;
@@ -91,14 +90,14 @@
   background-color: #ff9800;
 }
 .elfinder-toast-msg {
-  font-family: "Noto Sans", sans-serif;
+  font-family: -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
   font-size: 17px;
 }
 /**
  * For Ace Editor
  */
 #ace_settingsmenu {
-  font-family: "Noto Sans", sans-serif;
+  font-family: -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
   box-shadow: 0 1px 30px rgba(0, 0, 0, 0.6) !important;
   background-color: #1d2736 !important;
   color: #e6e6e6 !important;
@@ -609,7 +608,9 @@ div.elfinder-cwd-wrapper-list .ui-icon-grip-dotted-vertical {
 .elfinder-quicklook-navbar-icon {
   background: transparent;
   font: normal normal normal 14px/1 material;
-  font-size: 32px;
+  font-size: 24px;
+  width: 24px;
+  height: 24px;
   color: #fff;
 }
 .elfinder-quicklook-titlebar-icon {
@@ -1344,6 +1345,7 @@ div.elfinder-cwd-wrapper-list .ui-icon-grip-dotted-vertical {
   border-radius: 0;
   border: 0;
   color: #fff;
+  padding-top: 5px;
 }
 .elfinder-path,
 .elfinder-stat-size {
@@ -1583,7 +1585,7 @@ div.elfinder-cwd-wrapper-list .ui-icon-grip-dotted-vertical {
   color: #f1f1f1;
 }
 .elfinder .ui-widget-content {
-  font-family: "Noto Sans", sans-serif;
+  font-family: -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
   color: #546e7a;
 }
 .elfinder-upload-dialog-wrapper .elfinder-upload-dirselect {
@@ -1656,6 +1658,9 @@ div.elfinder-cwd-wrapper-list .ui-icon-grip-dotted-vertical {
 .elfinder-quicklook {
   background: #232323;
   border-radius: 2px;
+}
+.elfinder-quicklook-navbar {
+  height: 27px;
 }
 .elfinder-quicklook-titlebar {
   background: inherit;
