--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -108,6 +108,9 @@ Desktop
   .italic {
     font-style: italic;
   }
+  .cross {
+    text-decoration: line-through;
+  }
 
   h1,h2,h3,h4,h5,h6,
   h3 a:visited {
