--- a/core/template/mobile/cmd.info.numeric.default.html
+++ b/core/template/mobile/cmd.info.numeric.default.html
@@ -14,21 +14,21 @@
       let cmd = $('.cmd[data-cmd_id=#id#]')
       let minValue = ('#minValue#' == '') ? 0 : parseInt('#minValue#')
       let maxValue = ('#maxValue#' == '') ? 100 : parseInt('#maxValue#')
-      if (_options.display_value >= maxValue) {
-        maxValue = _options.display_value
+      if (_options.value >= maxValue) {
+        maxValue = _options.value
         var angle = 0
-      } else if (_options.display_value <= minValue) {
-        minValue = _options.display_value
+      } else if (_options.value <= minValue) {
+        minValue = _options.value
         var angle = -180
       } else {
-        var angle = (((_options.display_value - minValue) * 180) / (maxValue - minValue)) - 180
+        var angle = (((_options.value - minValue) * 180) / (maxValue - minValue)) - 180
       }
       cmd.find('.gaugeValue').css('transform', 'scale(0.94) rotate('+angle+'deg)')
       cmd.find('.state strong').first().text(_options.display_value)
     });
 
     if (is_numeric('#state#')) {
-      jeedom.cmd.refreshValue([{cmd_id :'#id#',display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#'}])
+      jeedom.cmd.refreshValue([{cmd_id :'#id#',value: '#value#',display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#'}])
     } else {
       $('.cmd[data-cmd_uid=#uid#] .gauge').append('<center><span class="label label-danger">#state#</span></center>')
     }
