revert #2059 and fix last submenu max-height

--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -364,6 +364,29 @@ Desktop
   #jeedomMenuBar ul.navbar-nav > li ul ul {
     overflow: auto;
     overflow-x: hidden;
+  }
+
+  @media screen and (max-height: 400px) {
+    #jeedomMenuBar ul.navbar-nav > li ul ul {
+      max-height: 114px;
+      /* 4 items */
+    }
+  }
+
+  @media screen and (min-height: 400px) and (max-height: 800px) {
+    #jeedomMenuBar ul.navbar-nav > li ul ul {
+      max-height: 272px;
+      /* 10 items */
+    }
+  }
+
+  @media screen and (min-height: 801px) {
+    #jeedomMenuBar ul.navbar-nav > li ul ul {
+      max-height: 610px;
+    }
+  }
+
+  #jeedomMenuBar ul.navbar-nav > li:last-child ul ul {
     max-height: 80vh;
   }
 
