--- a/core/template/dashboard/cmd.action.slider.default.html
+++ b/core/template/dashboard/cmd.action.slider.default.html
@@ -35,7 +35,7 @@
     })
 
     jeedom.cmd.addUpdateFunction('#id#',function(_options) {
-      mySlider#id#.set(_options.display_value)
+      mySlider#id#.set(_options.value)
     });
   </script>
 </div>
