--- a/core/template/dashboard/cmd.action.slider.sliderVertical.html
+++ b/core/template/dashboard/cmd.action.slider.sliderVertical.html
@@ -36,9 +36,9 @@
     })
 
     jeedom.cmd.addUpdateFunction('#id#',function(_options) {
-      mySlider#id#.set(_options.display_value)
+      mySlider#id#.set(_options.value)
     });
 
-    jeedom.cmd.refreshValue([{cmd_id :'#id#',display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#'}])
+    jeedom.cmd.refreshValue([{cmd_id :'#id#', value: '#value#', display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#'}])
   </script>
 </div>
