--- a/core/template/mobile/cmd.action.slider.default.html
+++ b/core/template/mobile/cmd.action.slider.default.html
@@ -26,7 +26,7 @@
     })
 
     jeedom.cmd.addUpdateFunction('#id#',function(_options) {
-      mySlider#id#.set(_options.display_value)
+      mySlider#id#.set(_options.value)
     });
   </script>
 </div>
