--- a/core/template/dashboard/cmd.action.slider.value.html
+++ b/core/template/dashboard/cmd.action.slider.value.html
@@ -76,8 +76,8 @@
     })
 
     jeedom.cmd.addUpdateFunction('#id#',function(_options) {
-      $inputNumber#id#.val(_options.display_value).attr('value', _options.display_value).attr('aria-valuenow', _options.display_value)
-      if ('#noslider#' != '1') mySlider#id#.set(_options.display_value)
+      $inputNumber#id#.val(_options.value).attr('value', _options.value).attr('aria-valuenow', _options.value)
+      if ('#noslider#' != '1') mySlider#id#.set(_options.value)
     });
   </script>
 </div>
